welcome.lessons.welcome.bat.bool1.In1020.scala.error
in1020:2: error: value and is not a member of Boolean
  if (a>10 and a<20) {
           ^in1020:4: error: value and is not a member of Boolean
  } else if (b>10 and b<20) {
                  ^