welcome.lessons.welcome.bat.bool1.In1020.scala.code
def in1020(a:Int, b:Int):Boolean = {
  if (a>10 and a<20) {
    return true
  } else if (b>10 and b<20) {
    return true
  } else {
    return false
  }
}